# agentbeats-finance-agent

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  docker.yml
src/: agent.py  config.py  executor.py  financial_tools.py  messenger.py  prompts.py  server.py
tests/: test_agent.py
