[project]
name = "agentbeats-finance-agent"
version = "0.1.0"
description = "A2A-compliant Finance Agent for AgentBeats / AgentX Berkeley RDI Sprint 1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "uvicorn>=0.38.0",
    "openai>=1.30.0",
    "groq>=0.9.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
